--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SMFEST ABUJA</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>SMFEST</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="h-[30vh] w-full bg-blue-300 flex">
-      <img src="smfest images/Smfest logo.webp" alt="" class="h-[50px]" />
-    </div>
+    <header>
+      <div></div>
+      <div></div>
+    </header>
   </body>
 </html>
